@@ -3,3 +3,4 @@
 ### Changed
 
 ### Fixed
+- Fixed an issue with the labelling of the TMT-6 channels.
